[package]
authors = ["fnafnio <fabiopungg@gmail.com>"]
name = "ltc690x"
edition = "2018"
version = "0.2.0"
repository = "https://github.com/fnafnio/ltc690x/"
license = "MIT OR Apache-2.0"
categories = ["embedded", "no-std"]
keywords = ["hal", "driver"]
description = "driver crate for LTC690x serial programmable oscillator"

[dependencies]
embedded-hal = "0.2.6"
defmt = { version = "0.2.3", optional = true }

[dev-dependencies]
defmt = "0.2.3"
defmt-rtt = "0.2.0"
cortex-m = "0.7.3"
cortex-m-rt = "0.6.15"
cortex-m-rtic = "0.5.7"
nrf52840-hal = { version = "0.12.2", features = ["rt"] }
panic-probe = "0.2.0"


[features]
defmt-default = []
defmt-trace = []
defmt-debug = []
defmt-info = []
defmt-warn = []
defmt-error = []

default = ["defmt"]
